--- a/Databases_in_Practice_MMP1/MMP1_exploration.Rmd
+++ b/Databases_in_Practice_MMP1/MMP1_exploration.Rmd
@@ -8,7 +8,7 @@ output:
 geometry: "left=1.5cm,right=1.5cm,top=0.5cm,bottom=0.5cm"
 ---
 
-The goal of this exploration is to become more familiar on protein databases by conduction an exploration on MMP1. **Matrix metalloprotease 1 (MMP1)** is a human protein involved in a number of different diseases, especially cancer. It degrades collagen and other highly insoluble substrates and is therefore crucial for the integrity and flexibility of tissues.
+The goal of this exploration is to become more familiar on protein databases by conducting an exploration on MMP1. **Matrix metalloprotease 1 (MMP1)** is a human protein involved in a number of different diseases, especially cancer. It degrades collagen and other highly insoluble substrates and is therefore crucial for the integrity and flexibility of tissues.
 
 **1. What is the gene symbol and the uniprot id for human MMP1?** <br>
 MMP1 is also found in other organisms. When we select for 'human' in UniProt, we see the ID is *P03956*. The gene symbol is MMP1 and CLG is a synonym. The secondary Accession is *P08156*
@@ -31,7 +31,7 @@ Source: https://www.rcsb.org/structure/1FBL
 
 **3. Is MMP1 phosphorylated? If yes, where (at what position) and at what amino acids?** <br>
 
-According to phosphosite.org-a database for post translational modifications- there are 10 phosphorylated sites found by high throughput papers and only one was found by both high throughput and low throghput. See below for the exact sites that are phosphorylated. There is interestingly, one ubiquitylation listed in residue 450. 
+According to phosphosite.org-a database for post translational modifications- there are 10 phosphorylated sites found by high throughput papers and only one was found by both high throughput and low throghput papers. See below for the exact sites that are phosphorylated. There is interestingly, one ubiquitylation listed in residue 450. 
 
 ![MMP1 Modifications](mmp1_modifications.png)
 <br>
@@ -59,10 +59,15 @@ Source: https://reactome.org/content/detail/R-HSA-1604367
 
 **6. Was MMP1 found in any 2d gel, if yes, provide the image of the gel (or if there are two or more different conditions compared in one study, discuss similarities and differences for different gems with respect to MMP1.**<br>
 
+I had a slighlty difficult time using the gels database because it kept returning no queries. When searching the SWISS-2DPAGE Repository, with the term Matrix metalloprotease, 13 results show-7 results correspond to humans. One study compares the expression in different conditions like cirrhosis or pregnancy (see gel below). The gel unfortunately does not annotate MMP1. 
+
+![MMP1 pathways](mmp1_gelsinfo.png)
+![MMP1 pathways](mmp1_gel.png)
+Source: https://world-2dpage.expasy.org/swiss-2dpage/viewer&map=PLASMA_HUMAN&ac=P01009
 
 **7. What is MMP1’s mass? Have peptides derived from MMPP1 been found in any samples? Show the corresponding mass spectra**<br>
 
-The mass of MMP1 is 	1751.92 (average molecular weight). According to the peptide atlas, there are 115 derived peptides and some have been experimentally observed. For example, the peptide AFQLWSNVTPLTFTK with accession PAp01662434 has the corresponding spectra below. This spectra for example, ahs some post translational modifications. 
+The mass of MMP1 is 1751.92 (average molecular weight). According to the peptide atlas, there are 115 derived peptides and some have been experimentally observed. For example, the peptide AFQLWSNVTPLTFTK with accession PAp01662434 has the corresponding spectra below. This spectra for example, has some post translational modifications. 
 
 ![MMP1 pathways](mmp1_peptide.png)
 Source: https://db.systemsbiology.net/sbeams/cgi/PeptideAtlas/GetPeptide?_tab=3&atlas_build_id=550&searchWithinThis=Peptide+Name&searchForThis=PAp01662434&action=QUERY
